# bpfman

./: .yamllint.yaml  404.html  CONTRIBUTING.md  Cargo.toml  RELEASE.md  go.work.sum  index.html  mkdocs.yml  requirements.txt  versions.json
.github/workflows/: build.yml  image-build.yaml
bpfctl/: Cargo.toml
bpfctl-guide/: index.html
bpfctl/src/: main.rs
bpfd/: Cargo.toml
bpfd-agent/: Cargo.toml
bpfd-api/: Cargo.toml
bpfd-k8s-api/: Cargo.toml
bpfd-operator/: Containerfile.bpfd-operator  Makefile  go.mod  go.sum  ocp.txt
bpfman/: Cargo.toml
bpfman-ns/: Cargo.toml
bpfman-operator/: Makefile
bpfman-rpc/: Cargo.toml
building-bpfd/: index.html
changelogs/: CHANGELOG-v0.3.0.md
configuration/: index.html
cri-example/: Cargo.toml
cri-example/src/: main.rs
example-bpf/: index.html
example-bpf-k8s/: index.html
example-bpf-local/: index.html
examples/: Makefile  go.mod  go.sum
image-build/: index.html
k8s-cri-api/: Cargo.toml
k8s-deployment/: index.html
linux-capabilities/: index.html
logging/: index.html
main/: 404.html  index.html
proto/: api.proto  bpfd.proto  bpfman.proto
release-v0.2.0/: bpfd-crds-install-v0.2.0.yaml  bpfd-operator-install-v0.2.0.yaml  go-tc-counter-install-v0.2.0.yaml  go-tracepoint-counter-install-v0.2.0.yaml  go-xdp-counter-install-v0.2.0.yaml
scripts/: bpfman.socket  build-image.sh  certificates.sh  lint.sh
search/: search_index.json
shipping-bytecode/: index.html
tutorial/: index.html
xtask/: Cargo.toml
xtask/public-api/: bpfman.txt
xtask/src/: main.rs  protobuf.rs  unit_test.rs
(+248 files in other folders)
