[workspace]
members = ["bpfd", "bpfd-api", "bpfd-common", "bpfctl", "xtask", "tests/integration-test", "tests/integration-test-macros", "k8s-cri-api", "cri-example"]

[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
oci-distribution = {git = "https://github.com/krustlet/oci-distribution", branch="main"}