[package]
name = "cri-example"
version = "1.0.0"
edition = "2021"

[[bin]]
    name = "cri-example"
    path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-cri = "0.6.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.8.3"
tower = "0.4.13"
k8s-cri-api = { version = "1.0.0", path = "../k8s-cri-api"}
