[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
serde_json = "1"
tonic-build = "0.8"
hyper = { version = "0.14", features = ["full"] }
futures-util = "0.3.27"
futures = "0.3.27"
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
